<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_prompt">Don\'t have an account?</string>
    <string name="sign_up_whitespace">\u00A0</string>
    <string name="sign_up_link_text">Sign up here</string>
    <string name="email_validation_error_message">Please enter a valid email address (e.g. name@example.com)</string>
    <string name="password_validation_error_message">Please enter a password with at least 8 characters</string>
    <string name="login_credentials_incorrect_error_message">Incorrect email or password. Please try again.</string>
    <string name="generic_error_message">An error occurred. Please try again later.</string>
    <string name="ok">OK</string>
    <string name="loading">Loading&#8230;</string>
    <string name="confirm_password_validation_error_message">Please make sure your passwords match</string>
    <string name="email_already_used_error_message">This email address is already in use. Please try another one.</string>
    <string name="form_validation_error_announcement">Please fix the errors in the form.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="navigate_back">Navigate back</string>
    <string name="habit_list_title">Habits</string>
    <string name="habit_list_add_habit">Add habit</string>
    <string name="habit_list_open_settings">Open settings</string>
    <string name="habit_list_error_message">An error occurred. Tap to retry.</string>
    <string name="habit_list_end_of_pagination_message">No more habits to show</string>
    <string name="habit_list_empty_message">No habits yet. Tap + to add your first habit.</string>
    <string name="habit_list_item_accessibility_readout">%1$s. Streak %2$s. Created %3$s.</string>
...
