...
import com.davidread.habittracker.signup.model.SignUpTextFieldViewState
import com.davidread.habittracker.signup.model.SignUpViewEffect
import com.davidread.habittracker.signup.model.SignUpViewIntent
import com.davidread.habittracker.signup.model.SignUpViewState
import com.davidread.habittracker.signup.viewmodel.SignUpViewModel

internal const val SIGN_UP_BUTTON_TEST_TAG = "sign_up_button"
internal const val CLEAR_SIGN_UP_EMAIL_BUTTON_TEST_TAG = "clear_sign_up_email_button"

@Composable
fun SignUpScreen(
    modifier: Modifier = Modifier,
    viewModel: SignUpViewModel = hiltViewModel(),
    onNavigateToHabitListScreen: () -> Unit = {},
...
